# design-patterns-python

./: Makefile  pyproject.toml
behavioral-patterns/chain_of_responsability/: subject.py  subject_segment.py
behavioral-patterns/chain_of_responsibility/: subject.py  subject_segment.py  subject_type.py  test_subject.py
behavioral-patterns/chain_of_responsibility/Ex1/: subject.py  subject_type.py
behavioral-patterns/state/: ride.py  ride_exception.py  ride_state.py  test_ride.py
