[tool.poetry]
name = "Design Patterns"
version = "0.1.0"
description = ""
authors = ["ivarvingrencarrera <ivar.carrera@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"


[tool.poetry.group.lint.dependencies]
blue = "*"
isort = "*"
ruff = "*"
pip-audit = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = ["A003", "E402", "UP006", "UP007", "UP035"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/**" = ["ARG", "PLR2004", "S"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["test*"]
disable_error_code = ["attr-defined", "misc", "union-attr"]

[tool.ruff.pylint]
max-args = 10

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.report]
exclude_also = [ "pass"]